minor updates to AUTHORS and LICENSE files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# Contributors to the Buckshot project #
+# Contributors to the Buckshot Project #
 
 John Evans (https://plus.google.com/u/0/115427174005651655317/about)
 
